--- a/_gulp/_jade/_include/_footer-js.jade
+++ b/_gulp/_jade/_include/_footer-js.jade
@@ -2,6 +2,8 @@
 link(rel="stylesheet", href="./js/libs/magnific-popup/magnific-popup.css")
 script(src='./js/libs/magnific-popup/jquery.magnific-popup.min.js')
 script(src='./js/libs/bootstrap/bootstrap.min.js')
+script(src='./js/libs/sumoselect/jquery.sumoselect.min.js')
+link(rel="stylesheet", href="./js/libs/sumoselect/sumoselect.css")
 
 //- Old browser
   script.
