--- a/_gulp/_jade/_include/_js-body-bottom.jade
+++ b/_gulp/_jade/_include/_js-body-bottom.jade
@@ -1,4 +1,4 @@
-// Retina js
-script(src='./js/libs/retinajs/retina.min.js')
-script.
-  retinajs( $('img') );
+//- Retina js
+  script(src='./js/libs/retinajs/retina.min.js')
+  script.
+    retinajs( $('img') );
