--- a/_gulp/_jade/news-document.jade
+++ b/_gulp/_jade/news-document.jade
@@ -3,7 +3,7 @@ doctype
 html(lang="ru")
   
   -var active = 'Новости' //активный пункт меню, список в header.jade
-  -var pageTitle = 'Список новостей' + ' - siteName' //title страницы для генерации верстки  
+  -var pageTitle = 'Список новостей' + ' - Биржа автозапчастей' //title страницы для генерации верстки  
 
   include ./_include/_head
 
