--- a/_gulp/_sass/2-layout/_buttons.sass
+++ b/_gulp/_sass/2-layout/_buttons.sass
@@ -87,3 +87,13 @@
     padding-top: 16px
     padding-bottom: 16px
     min-width: 175px
+
+  &--biggest
+    height: 70px
+    display: block
+    max-width: 516px
+    width: 100%
+    margin: 0 auto 5px
+    font-size: rem(16)
+    padding-top: 25px
+    padding-bottom: 25px
