--- a/_gulp/_jade/register.jade
+++ b/_gulp/_jade/register.jade
@@ -3,7 +3,7 @@ doctype
 html(lang="ru")
   
   -var active = 'Регистрация' //активный пункт меню, список в header.jade
-  -var pageTitle = 'Регистрация' + ' - siteName' //title страницы для генерации верстки  
+  -var pageTitle = 'Регистрация' + ' - Биржа автозапчастей' //title страницы для генерации верстки  
 
   include ./_include/_head
 
@@ -19,7 +19,7 @@ html(lang="ru")
       .container
         
         .row
-          .col-sm-8.col-sm-push-2
+          .col-lg-8.col-lg-push-2.col-md-10.col-md-push-1
             .h1.h1--dark Регистрация в интернет-магазине
             
             p Для регистрации в интернет-магазине, пожалуйста, заполните данную анкету.
@@ -33,6 +33,50 @@ html(lang="ru")
               form(action="#")
                 
                 fieldset.form__fieldset
+                  
+                  label.form__block__label.form__block__label--head Я регистрируюсь как:
+                  
+                  .form__row__group.form__row__group--xxs-block
+                    div.first.first--register
+                      .form__group
+                        label.form__radio.form__radio--head
+                          span.span
+                            input(type="radio" name="radio00" checked)
+                            span.input-radio
+                          span.span
+                            span.input-label Компания
+                    div
+                      .form__group
+                        label.form__radio.form__radio--head
+                          span.span
+                            input(type="radio" name="radio00")
+                            span.input-radio
+                          span.span
+                            span.input-label Частный предприниматель
+                        
+                fieldset.form__fieldset
+                  
+                  label.form__block__label.form__block__label--head Хочу пройти регистрацию: 
+                  
+                  .form__row__group.form__row__group--xs-block
+                    div.first.first--register
+                      .form__group
+                        label.form__radio.form__radio--head
+                          span.span
+                            input(type="radio" name="radio11" checked)
+                            span.input-radio
+                          span.span
+                            span.input-label По телефону
+                    div
+                      .form__group
+                        label.form__radio.form__radio--head
+                          span.span
+                            input(type="radio" name="radio11")
+                            span.input-radio
+                          span.span
+                            span.input-label онлайн и получить 
+                              a(href="#") 
+                                strong.strong--frh480 максимальную скидку
                 
                 fieldset.form__fieldset
                   .form__group.form__group--slim.has-error.has-feedback
@@ -118,6 +162,14 @@ html(lang="ru")
                     span.form__feedback 
                       .feedback-info Обязательное поле!
                       i.ion-close
+                        
+                  .form__group.form__group--captcha
+                    div.first
+                      label Картинка для проверки 
+                    div.center
+                      img(src="./tmp/captcha.gif", alt="").captcha
+                    div.last
+                      input(type="text").form-control
                 
                 fieldset.form__fieldset
                   legend.form__legend Анкета
@@ -191,6 +243,7 @@ html(lang="ru")
                           span.input-radio
                         span.span
                           span.input-label другое (указать)
+                      
                   
                   .form__block
                     .form__group.form__group--slim
@@ -289,8 +342,10 @@ html(lang="ru")
                         span.span
                           input(type="radio" name="radio4")
                           span.input-radio
-                        span.span
+                        span.span.span--nowrap
                           span.input-label другое (указать)
+                        span.span.span--w100
+                          input(type="text").form-control.form-control--other
                   
                   .form__block
                     label.form__block__label Укажите эл. адреса для отправки: 
@@ -330,6 +385,17 @@ html(lang="ru")
                           span.input-radio
                         span.span
                           span.input-label отправка через ТК
+                        span.span
+                          select.sumoselect
+                            option(value="Новая Почта" selected) Новая Почта
+                            option(value="УкрПочта") УкрПочта
+                            option(value="РусПочта") РусПочта
+                            option(value="Курьер") Курьер
+              
+                .register-info спасибо за регистрацию, после обработки вашей информации менеджером вы получите файл с договором на Email
+                
+                button(type="submit").btn.btn--blue.btn--biggest Зарегистрироваться на сайте
+                //- a(href="#").btn.btn--blue.btn--biggest Зарегистрироваться на сайте
 
     
     include ./_include/_footer
