--- a/_gulp/_sass/2-layout/_forms.sass
+++ b/_gulp/_sass/2-layout/_forms.sass
@@ -31,11 +31,25 @@ button, html input[type=button], input[type=reset], input[type=submit]
       .form-control, .form__control
         border-bottom: 0
 
+    &--captcha
+      display: table
+      width: 100%
+      margin-top: -9px
+      &>div
+        display: table-cell
+        vertical-align: middle
+        &.first
+          width: 165px
+          label
+            margin-bottom: 0
+        &.center
+          width: 162px
+
   &-control, &__control
     display: block
     width: 100%
     height: 40px
-    padding: 9px 12px
+    padding: 9px 10px
     font-size: rem(12)
     line-height: 1.42857143
     color: $primary-color
@@ -59,6 +73,12 @@ button, html input[type=button], input[type=reset], input[type=submit]
       height: 54px
       padding-top: 16px
       padding-bottom: 16px
+    &--other
+      border-top: 0
+      height: 20px
+      padding-top: 0
+      padding-bottom: 5px
+      // width: 625px
 
   &__subscription
     padding-top: 15px
@@ -105,15 +125,22 @@ button, html input[type=button], input[type=reset], input[type=submit]
       font-size: rem(15)
       font-weight: 400
       font-family: $font-roboto-medium
-      padding-left: 12px
+      padding-left: 10px
       margin-bottom: 13px
       display: block
+
+      &--head
+        text-transform: uppercase
+        border-left: 2px solid $color-blue
+        padding-left: 10px
+        margin-bottom: 20px
 
   &__radio
     display: table
     line-height: 1
     cursor: pointer
     margin-left: 10px
+    padding-left: 2px
     &.is-selected
       .input-label
         color: $color-blue
@@ -123,6 +150,10 @@ button, html input[type=button], input[type=reset], input[type=submit]
       line-height: 0
       &+.span
         padding-left: 15px
+      &--nowrap
+        white-space: nowrap
+      &--w100
+        width: 100%
     input[type="radio"]
       display: none
       &:checked
@@ -149,12 +180,34 @@ button, html input[type=button], input[type=reset], input[type=submit]
         height: 12px
         background-color: $color-white
         border-radius: 50%
+    &--head
+      margin-left: 0
+      .input-label
+        text-transform: uppercase
+        font-size: rem(15)
+        line-height: 1.1
+        color: #636363
+      .span + .span
+        padding-left: 10px
+
+  &__row
+    &__group
+      display: table
+      &>div
+        display: table-cell
+        vertical-align: top
+        &.first
+          &--register
+            width: 160px
 
 .input-label
   font-size: rem(12)
   font-family: $font-roboto-medium
   display: block
   line-height: 1.2
+  transition: color 0.2s linear
+  a
+    color: $primary-color
 
 .feedback-info
   position: absolute
@@ -189,6 +242,8 @@ label
   max-width: 100%
   margin-bottom: 5px
   font-weight: 400
+  font-size: rem(12)
+  padding-left: 12px
 
 .has
   &-success .form-control, &-success .form__control
@@ -236,3 +291,6 @@ label
 
   &-feedback
     position: relative
+
+.captcha
+  border: 1px solid $color-gray
