--- a/_gulp/_sass/2-layout/_header.sass
+++ b/_gulp/_sass/2-layout/_header.sass
@@ -11,6 +11,8 @@
     &>div
       display: table-cell
       vertical-align: middle
+      &.first
+        width: 250px
 
   &__logo
     display: inline-block
@@ -47,15 +49,19 @@
       .header__lang__head
         color: $color-white
         background: $color-blue
-      li
-        top: 30px
+      ul
+        display: block
         opacity: 1
-        &:nth-child(2)
-          top: 30px
-          transition-delay: 0.2s
-        &:nth-child(3)
-          top: 60px
-          transition-delay: 0.3s
+        animation: visible 0.3 ease
+      // li
+      //   top: 30px
+      //   opacity: 1
+      //   &:nth-child(2)
+      //     top: 30px
+      //     transition-delay: 0.2s
+      //   &:nth-child(3)
+      //     top: 60px
+      //     transition-delay: 0.3s
 
     &__wrapper
       position: absolute
@@ -65,12 +71,15 @@
         margin: 0
         padding: 0
         position: absolute
+        opacity: 0
+        display: block
+        top: 30px
         li
           list-style: none
           margin: 0
-          position: absolute
-          top: 0
-          opacity: 0
+          // position: absolute
+          // top: 0
+          // opacity: 0
           display: block
           transition: all 0.2s linear
           &>a, &>span
