--- a/_gulp/_sass/3-modules/_modules.sass
+++ b/_gulp/_sass/3-modules/_modules.sass
@@ -2,7 +2,6 @@
 
 /* news */
 .news
-
   &>div
     display: inline-block
     vertical-align: top
@@ -191,3 +190,10 @@
 .help
   &__block
     padding-bottom: 20px
+
+/**/
+.register-info
+  font-size: rem(15)
+  color: $color-blue
+  text-transform: uppercase
+  margin-bottom: 35px
