--- a/_gulp/_jade/_include/_head.jade
+++ b/_gulp/_jade/_include/_head.jade
@@ -32,5 +32,8 @@ head
   // Jquery 2.2.4
   script(src='./js/libs/jquery/jquery-2.2.4.min.js')
   script(src='./js/libs/jquery/jquery-migrate-1.4.1.min.js')
+    
+  link(rel="stylesheet", href="./js/libs/magnific-popup/magnific-popup.css")
+  link(rel="stylesheet", href="./js/libs/sumoselect/sumoselect.css")
   
   link(rel='stylesheet', href='./css/main.css')
