--- a/_gulp/_sass/1-base/_base.sass
+++ b/_gulp/_sass/1-base/_base.sass
@@ -137,6 +137,12 @@ a, .link, .link-underline
 
 .content
   padding-bottom: 40px
+  &__head
+    &--dark
+      h1, .h1
+        color: $primary-color
+  &--main
+    min-height: 500px
 
 .container
   margin: 0 auto
