--- a/_gulp/_sass/2-layout/_forms.sass
+++ b/_gulp/_sass/2-layout/_forms.sass
@@ -45,6 +45,15 @@ button, html input[type=button], input[type=reset], input[type=submit]
         &.center
           width: 162px
 
+    &--sumoselect
+      display: table
+      &>div
+        display: table-cell
+        vertical-align: top
+      .SumoSelect
+        margin-left: 10px
+        margin-top: -6px
+
   &-control, &__control
     display: block
     width: 100%
