--- a/_gulp/_sass/2-layout/_header.sass
+++ b/_gulp/_sass/2-layout/_header.sass
@@ -72,7 +72,7 @@
         padding: 0
         position: absolute
         opacity: 0
-        display: block
+        display: none
         top: 30px
         li
           list-style: none
