--- a/_gulp/_sass/2-layout/_menu.sass
+++ b/_gulp/_sass/2-layout/_menu.sass
@@ -18,13 +18,13 @@
       &>li
         display: inline-block
         margin: 0
-        padding: 0 20px
+        padding: 0 15px
         vertical-align: middle
         &>a, &>span
           display: block
           min-width: 120px
           text-align: center
-          padding: 0 30px
+          padding: 0 25px
           height: 31px
           line-height: 30px
           color: $primary-color
@@ -202,6 +202,7 @@
   font-size: rem(14)
   margin-bottom: 20px
   padding-bottom: 15px
+  font-family: $font-roboto-medium
   ul
     margin: 0
     padding: 0
@@ -232,3 +233,15 @@
           color: $color-blue
         &::before
           display: block
+      .label
+        display: inline-block
+        color: $color-white
+        background: $color-blue
+        width: 20px
+        height: 20px
+        line-height: 20px
+        text-align: center
+        font-size: rem(10)
+        font-family: $font-roboto-light
+        margin-left: 10px
+        vertical-align: middle
