--- a/_gulp/_jade/index.jade
+++ b/_gulp/_jade/index.jade
@@ -12,20 +12,19 @@ html(lang="ru")
     // Preloader
     //- include ./_include/_preloader
     
-    include ./_include/_header
-    
-    .content
-      .container
+    #body__main.body__main
+      canvas#bg-animation
+      
+      .body__main__wrapper
+        include ./_include/_header
         
-        .section
-          h1 Главная 
-          
-          .row
-            .col-md-4 4 collumns
-            .col-md-8 8 collumns
+        .content.content--main
+          .container
+            
+            h1 test
 
     
-    include ./_include/_footer
+        include ./_include/_footer
     //- div(style="height: 900px; background-color: #000")
     
     //[if gte IE 9]
@@ -41,3 +40,8 @@ html(lang="ru")
     include ./_include/_footer-js
     script(src='./js/common.js')
     include ./_include/_js-body-bottom
+    
+    script(src="http://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/EasePack.min.js")
+    script(src="http://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/rAF.js")
+    script(src="http://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/js/TweenLite.min.js")
+    script(src="./js/libs/application.js")
