--- a/_gulp/_sass/2-layout/_menu.sass
+++ b/_gulp/_sass/2-layout/_menu.sass
@@ -201,7 +201,7 @@
 .navigation-level2
   font-size: rem(14)
   margin-bottom: 20px
-  padding-bottom: 15px
+  padding-bottom: 20px
   font-family: $font-roboto-medium
   ul
     margin: 0
@@ -224,7 +224,7 @@
       &>a, &>span
         color: $primary-color
         display: block
-        padding: 3px 0
+        padding: 4px 0
         text-decoration: none
         &:hover
           color: $color-blue
@@ -245,3 +245,6 @@
         font-family: $font-roboto-light
         margin-left: 10px
         vertical-align: middle
+
+  &--border
+    border-bottom: 1px solid #e8e8e8
