--- a/_gulp/_sass/2-layout/_buttons.sass
+++ b/_gulp/_sass/2-layout/_buttons.sass
@@ -97,3 +97,25 @@
     font-size: rem(16)
     padding-top: 25px
     padding-bottom: 25px
+
+  &--xsl
+    background: $color-white
+    width: 82px
+    padding: 0
+    height: 40px
+    line-height: 40px
+    border-color: $color-blue
+    display: block
+    min-width: inherit
+    svg
+      vertical-align: -9px
+      fill: $color-blue
+      path.path-color
+        fill: $color-blue
+    &:hover
+      background: $color-blue
+      border-color: $color-white
+      svg
+        fill: $color-white
+        path.path-color
+          fill: $color-white
