--- a/_gulp/_sass/4-utils/_media-queries.sass
+++ b/_gulp/_sass/4-utils/_media-queries.sass
@@ -80,9 +80,16 @@
         &.first
           width: 157px
 
+  .navigation-level2
+    &--user
+      ul
+        li
+          .label
+            right: 0
+            top: 8px
+
 /* Small Devices, Tablets */
 @media only screen and (max-width : 767px)
-
 
   .footer
     &__wrapper
@@ -176,7 +183,6 @@
 
   .footer
     &__logo
-
       &>div
         &:first-child
           display: none
@@ -284,7 +290,6 @@
           width: 100%
           margin-top: -1px
 
-
   .strong--frh480
     display: block
     margin-top: 5px
@@ -303,6 +308,8 @@
     &__calendar__month + .news__calendar__month
       margin-top: 10px
 
+  .link-history
+    margin-right: -95px
 
 
 /* Custom, iPhone Retina */
