--- a/_gulp/_jade/news.jade
+++ b/_gulp/_jade/news.jade
@@ -31,140 +31,76 @@ html(lang="ru")
                 li: a(href="#") Покупка и продажа
             
             .news__calendar
-              .news__calendar__row
-                .news__calendar__head.table.active
-                  div.table__cell
-                    a(href="#") 2016 год
-                  div.table__cell &nbsp;
-                  div.table__cell
-                    span 2105
-                .news__calendar__body
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Январь
-                    div.table__cell
-                    div.table__cell
-                      span 54
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Февраль
-                    div.table__cell
-                    div.table__cell
-                      span 354
-                  .news__calendar__month.table.active
-                    div.table__cell
-                      a(href="#") Апрель
-                    div.table__cell
-                    div.table__cell
-                      span 98
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Май
-                    div.table__cell
-                    div.table__cell
-                      span 354
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Июнь
-                    div.table__cell
-                    div.table__cell
-                      span 874
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Ноябрь
-                    div.table__cell
-                    div.table__cell
-                      span 9
-                      
-              .news__calendar__row
-                .news__calendar__head.table
-                  div.table__cell
-                    a(href="#") 2015 год
-                  div.table__cell &nbsp;
-                  div.table__cell
-                    span 6544
-                .news__calendar__body
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Январь
-                    div.table__cell
-                    div.table__cell
-                      span 54
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Февраль
-                    div.table__cell
-                    div.table__cell
-                      span 354
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Апрель
-                    div.table__cell
-                    div.table__cell
-                      span 98
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Май
-                    div.table__cell
-                    div.table__cell
-                      span 354
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Июнь
-                    div.table__cell
-                    div.table__cell
-                      span 874
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Ноябрь
-                    div.table__cell
-                    div.table__cell
-                      span 9
-                      
-              .news__calendar__row
-                .news__calendar__head.table
-                  div.table__cell
-                    a(href="#") 2014 год
-                  div.table__cell &nbsp;
-                  div.table__cell
-                    span 9874
-                .news__calendar__body
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Январь
-                    div.table__cell
-                    div.table__cell
-                      span 54
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Февраль
-                    div.table__cell
-                    div.table__cell
-                      span 354
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Апрель
-                    div.table__cell
-                    div.table__cell
-                      span 98
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Май
-                    div.table__cell
-                    div.table__cell
-                      span 354
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Июнь
-                    div.table__cell
-                    div.table__cell
-                      span 874
-                  .news__calendar__month.table
-                    div.table__cell
-                      a(href="#") Ноябрь
-                    div.table__cell
-                    div.table__cell
-                      span 9
+              ul
+                li.active
+                  a(href="#") 
+                    span 2016 год
+                    small 2105
+                  ul
+                    li: a(href="#")
+                      span Январь
+                      small 54
+                    li: a(href="#")
+                      span Февраль	
+                      small 354
+                    li.active: a(href="#")
+                      span Апрель	
+                      small 98
+                    li: a(href="#")
+                      span Май	
+                      small 354
+                    li: a(href="#")
+                      span Июнь	
+                      small 874
+                    li: a(href="#")
+                      span Ноябрь	
+                      small 9
+                li
+                  a(href="#") 
+                    span 2015 год
+                    small 6544
+                  ul
+                    li: a(href="#")
+                      span Январь
+                      small 54
+                    li: a(href="#")
+                      span Февраль	
+                      small 354
+                    li: a(href="#")
+                      span Апрель	
+                      small 98
+                    li: a(href="#")
+                      span Май	
+                      small 354
+                    li: a(href="#")
+                      span Июнь	
+                      small 874
+                    li: a(href="#")
+                      span Ноябрь	
+                      small 9
+                li
+                  a(href="#") 
+                    span 2014 год
+                    small 9874
+                  ul
+                    li: a(href="#")
+                      span Январь
+                      small 54
+                    li: a(href="#")
+                      span Февраль	
+                      small 354
+                    li: a(href="#")
+                      span Апрель	
+                      small 98
+                    li: a(href="#")
+                      span Май	
+                      small 354
+                    li: a(href="#")
+                      span Июнь	
+                      small 874
+                    li: a(href="#")
+                      span Ноябрь	
+                      small 9
             
             .tag
               a(href="#").active Запчасти
