--- a/_gulp/_jade/ua-state-of-account.jade
+++ b/_gulp/_jade/ua-state-of-account.jade
@@ -2,8 +2,8 @@ doctype
 
 html(lang="ru")
   
-  -var active = 'Cпециальные предложения' //активный пункт меню, список в header.jade
-  -var pageTitle = 'ЛЧ Cпециальные предложения' + ' - Биржа автозапчастей' //title страницы для генерации верстки
+  -var active = 'Состояние счета' //активный пункт меню, список в header.jade
+  -var pageTitle = 'ЛЧ Состояние счета' + ' - Биржа автозапчастей' //title страницы для генерации верстки
   -var headerBlock = 'ЛЧ'  
 
   include ./_include/_head
@@ -57,61 +57,45 @@ html(lang="ru")
                 li: a(href="#") Мои Заказы
                 li: a(href="#") Мои Сообщения
                   span.label 23
-                li: a(href="#") Состояние счета
+                li.active: a(href="#") Состояние счета
                 li: a(href="#") Состояние заказов
-                li.active: a(href="#") Спец. предложения
+                li: a(href="#") Спец. предложения
                 li: a(href="#") Мои Документы
                 li: a(href="#") Мои Настройки
             
           .col-sm-9.col-xs-12
-            h1 специальные предложения
+            h1 состояние счета
             
-            // Spesial offers
-            .special-offers
-              
-              .special-offers__block.table
-                div.table__cell.first
-                  a(href="#")
-                    img(src="./tmp/blog.png", alt="").img-responsive
-                div.table__cell
-                  a(href="#").special-offers__title Правильные «Жигули»: 500 лошадиных сил и 1,5 миллиона рублей
-                  .special-offers__date 2 ноября 2016
-                  p ВАЗ в Российской Дрифт Серии один, зато какой! «Пятерка» Федора Воробьева настолько неординарна, что привлекла даже организаторов шоу «Гонка Тысячелетия», пригласивших Федю и его автомобиль. 
-                    a(href="#").link-nounderline Читать полностью...
-                    
-              .special-offers__block.table
-                div.table__cell.first
-                  a(href="#")
-                    img(src="./tmp/blog2.png", alt="").img-responsive
-                div.table__cell
-                  a(href="#").special-offers__title Новый тип разметки в России: вафли
-                  .special-offers__date 1 ноября 2016
-                  p ВАЗ в Российской Дрифт Серии один, зато какой! «Пятерка» Федора Воробьева настолько неординарна, что привлекла даже организаторов шоу «Гонка Тысячелетия», пригласивших Федю и его автомобиль. 
-                    a(href="#").link-nounderline Читать полностью...
-                    
-              .special-offers__block.table
-                div.table__cell.first
-                  a(href="#")
-                    img(src="./tmp/blog3.png", alt="").img-responsive
-                div.table__cell
-                  a(href="#").special-offers__title Шипы или не шипы? Отвечаем на главные вопросы
-                  .special-offers__date 1 ноября 2016
-                  p ВАЗ в Российской Дрифт Серии один, зато какой! «Пятерка» Федора Воробьева настолько неординарна, что привлекла даже организаторов шоу «Гонка Тысячелетия», пригласивших Федю и его автомобиль. 
-                    a(href="#").link-nounderline Читать полностью...
-
-            // Pagination
-            .pagination
-              ul
-                li: span.line
-                li: a(href="#") 1
-                li: a(href="#") 2
-                li: a(href="#") 3
-                li.active: span 4
-                li: a(href="#") 5
-                li: a(href="#") 6
-                li: span ...
-                li: a(href="#") 99
-                li: span.line
+            table.table-basic.table--hover
+              thead
+                tr
+                  th(colspan="2").th--big.text--left ИНФОРМАЦИЯ
+              tbody
+                tr.tr--separator-top
+                  td(colspan="2") &nbsp;
+                tr
+                  td На счету
+                  td.text-right 
+                    strong € 0.00
+                tr
+                  td В заказе без оплаты
+                  td.text-right 
+                    strong € 0.00
+                tr
+                  td Сальдо баланса
+                  td.text-right 
+                    strong € 0.00
+                tr
+                  td Кредит
+                  td.text-right 
+                    strong € 0.00
+                tr
+                  td Остаток средств для заказа
+                  td.text-right 
+                    strong € 0.00
+            
+            .text-right
+              a(href="#").btn.btn--blue.btn--xxs-block Сообщить об оплате
     
     include ./_include/_footer
     //- div(style="height: 900px; background-color: #000")
@@ -129,7 +113,3 @@ html(lang="ru")
     include ./_include/_footer-js
     script(src='./js/common.js')
     include ./_include/_js-body-bottom
-
-  
-
-  
