--- a/_gulp/_sass/2-layout/_header.sass
+++ b/_gulp/_sass/2-layout/_header.sass
@@ -2,12 +2,12 @@
 .header
   // background-color: $color-gray
   // height: 100px
-  margin-bottom: 10px
+  margin-bottom: 25px
 
   &__wrapper
     display: table
     width: 100%
-    padding: 34px 0
+    padding: 34px 0 28px 0
     &>div
       display: table-cell
       vertical-align: middle
