--- a/_gulp/_sass/1-base/_base.sass
+++ b/_gulp/_sass/1-base/_base.sass
@@ -87,6 +87,13 @@ body
   font-size: rem(22)
   line-height: 1.38
 
+  &--intro
+    font-family: $font-intro
+    font-size: rem(20)
+    text-transform: uppercase
+    color: $color-blue
+    margin-bottom: 15px
+
 .h5, h5
   font-size: rem(18)
 
@@ -290,6 +297,9 @@ ol li
       margin-left: 0 !important
     &-right
       margin-right: 0 !important
+
+  &wrap
+    white-space: nowrap !important
 
 .table
   display: table
