--- a/_gulp/_sass/1-base/_variables.sass
+++ b/_gulp/_sass/1-base/_variables.sass
@@ -10,6 +10,7 @@ $color-black: #000000
 $color-blue: #30c4f3
 $color-lightblue: #97e1f9
 $color-red: #f16464
+$color-yellow: #ffc90f
 
 $primary-font: Arial, 'Helvetica Neue', Helvetica, sans-serif
 $font-ionicons: 'Ionicons'
