--- a/_gulp/_jade/_include/_header.jade
+++ b/_gulp/_jade/_include/_header.jade
@@ -1,26 +1,26 @@
 // Header
 header.header
   .container
-    
+
     .header__wrapper
       div.first
-        
+
         .header__logo
           a(href="#")
             img(src="./img/sp.gif", alt="")
-        
+
       div.center
-        
+
         .header__menu
           a(href="#").header__button
             i.ion-grid
             | Меню сайта
-      
+
           if headerBlock == 'ЛЧ'
             - var navigation = { 'Новости': '#', 'О компании': '#', 'APM Group': '#'};
           else
             - var navigation = { 'Новости': '#', 'О компании': '#', 'Стать клиентом': '#'};
-          
+
           nav(role="navigation").header__navigation
             ul
               each val, key in navigation
@@ -30,34 +30,48 @@ header.header
                 else
                   li
                     a(href=val, title=key)= key
-                  
+
       div.last
-        
+
         .header__right
-          div 
-            .header__enter
-              .header__enter__button
-                a(href="#").btn.btn--effect1
-                  span(data-hover="Вход") Вход
-              .header__enter__body
-                .header__enter__wrapper
-                  form(action="#")
-                    // .has-error
-                    .form__group
-                      label.hidden Ваш логин
-                      input(type="text" name="login" placeholder="Ваш логин").form-control
-                    .form__group
-                      label.hidden Ваш пароль
-                      input(type="password" name="password" placeholder="Ваш пароль").form-control
-                    .header__enter__bottom
-                      div
-                        button(type="submit").btn.btn--blue 
-                          strong ВОЙТИ НА САЙТ
-                      div
-                        .header__enter__link
-                          small Нет аккаунта?
-                          a(href="#").link-nounderline Зарегистрироваться
-              
+          div
+
+            if headerBlock == 'ЛЧ'
+              .header__enter
+                .header__enter__user
+                  div
+                    a(href="#").user__icon
+                      i.ion-person
+                      sup 23
+                  div
+                    a(href="#").user__cart
+                      i.ion-ios-cart
+                      sup 69
+
+            else
+              .header__enter
+                .header__enter__button
+                  a(href="#").btn.btn--effect1
+                    span(data-hover="Вход") Вход
+                .header__enter__body
+                  .header__enter__wrapper
+                    form(action="#")
+                      // .has-error
+                      .form__group
+                        label.hidden Ваш логин
+                        input(type="text" name="login" placeholder="Ваш логин").form-control
+                      .form__group
+                        label.hidden Ваш пароль
+                        input(type="password" name="password" placeholder="Ваш пароль").form-control
+                      .header__enter__bottom
+                        div
+                          button(type="submit").btn.btn--blue
+                            strong ВОЙТИ НА САЙТ
+                        div
+                          .header__enter__link
+                            small Нет аккаунта?
+                            a(href="#").link-nounderline Зарегистрироваться
+
           div
             .header__lang
               .header__lang__head RU
