--- a/_gulp/_sass/3-modules/_modules.sass
+++ b/_gulp/_sass/3-modules/_modules.sass
@@ -472,6 +472,73 @@
       &:hover
         text-decoration: underline
 
+  &__menu
+    display: none
+    // left: 15px
+    // right: 15px
+    background-color: #f4f4f4
+    height: 40px
+    line-height: 40px
+    color: $primary-color
+    text-decoration: none
+    font-size: 1rem
+    text-transform: uppercase
+    margin-bottom: 40px
+    text-align: center
+    margin-top: -40px
+    i
+      font-size: 1.3125rem
+      margin-right: 7px
+      vertical-align: middle
+      display: inline-block
+      vertical-align: -1px
+      line-height: 1
+
+  &__name
+    font-size: rem(20)
+    margin-bottom: 25px
+    small
+      display: block
+      line-height: 1
+      font-size: rem(12)
+      margin-top: 5px
+
+  &__head
+    margin-bottom: 5px
+    .h1, h1
+      display: inline-block
+      vertical-align: middle
+      margin-bottom: 0
+      &+.user__head__label
+        margin-left: 10px
+    &__label
+      display: inline-block
+      height: 26px
+      line-height: 25px
+      border: 1px solid #e8e8e8
+      vertical-align: middle
+      font-size: rem(12)
+      color: #e8e8e8
+      text-transform: uppercase
+      padding: 0 5px
+      &+.user__head__label
+        margin-left: 5px
+      svg
+        display: inline-block
+        position: relative
+        top: -2px
+        margin-right: 5px
+        vertical-align: middle
+        .path--color
+          fill: #e8e8e8
+      &.is-active
+        background-color: $color-yellow
+        border-color: $color-yellow
+        color: $color-white
+        svg
+          .path--color
+            fill: $color-white
+
 /**/
 .table-basic
   font-size: rem(14)
@@ -499,8 +566,45 @@
       padding: 0
       height: 15px
       background: none !important
+      font-size: 0
 
   .th--big
     font-size: 20px
     padding-top: 3px
     padding-bottom: 3px
+
+  &--last
+    width: 1px
+    white-space: nowrap
+
+  &--data
+    &>tbody, &>tfoot, &>thead
+      &>tr
+        &>td, &>th
+          text-align: left
+          // white-space: nowrap
+        &>th
+          text-transform: uppercase
+          white-space: nowrap
+          font-size: rem(10)
+
+.info-status
+  display: inline-block
+  height: 20px
+  line-height: 21px
+  background: $color-gray
+  color: $color-white
+  text-align: center
+  font-size: rem(10)
+  text-transform: uppercase
+  padding: 0 5px
+  white-space: nowrap
+
+  &--inwork
+    background: #ee9640
+  &--cancel
+    background: $color-red
+  &--issued
+    background: #7dc924
+  &--custom
+    background: $color-blue
